# news-search-engine

./: .example.env  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
backend/: cleaners.py  config.yaml  embeddings.py  flow.py  models.py  news_loader.py  qdrant.py  settings.py
frontend/: app.py  news_search.py  qdrant_search.py  ui.py
